--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                 </div>
                 <div class="table_container">
                     <header>
-                        <div class="table_buttons" id="up_next">
+                        <div id="up_next" class="table_buttons">
                             <span>
                                 Up Next
                             </span>
                         </div>
-                        <div class="table_buttons" id="next_launches">
+                        <div id="next_launches" class="table_buttons">
                             <span>
                                 Next Launches
                             </span>
@@ -128,26 +128,44 @@
             <div class="table" id="iss_tracking">
                 <div class="table_subtitle">
                     <h2>
-                        Imagine being on International Space Station
+                        Imagine being on ISS
                     </h2>
                 </div>
-                <div class="table_container">
-                    <div id="map_station">
-                        <script>
-                            var norad_n2yo = '25544';
-                            var size_n2yo = 'small';
-                            // var map_n2yo = '1';
-                        </script>
-                        <script type="text/javascript" src="https://www.n2yo.com/js/widget-tracker.js"></script>
-                        <div id="cosmonauts">
-                            <h3>
-                                People in Space right now :
-                            </h3>
+                <div id="iss_container" class="table_container">
+                    <header>
+                        <div id="live_tracking" class="table_buttons">
+                            <span>
+                                Live tracking
+                            </span>
                         </div>
-                        <div>
-                            <iframe width="420" height="315" src="https://www.youtube.com/embed/EEIk7gwjgIM"></iframe>
+                        <div id="live_streaming" class="table_buttons">
+                            <span>
+                                Live streaming
+                            </span>
                         </div>
-                        
+                    </header>
+                    <div id="map_station" class="table_body">
+                        <div class="subtitle_details">
+                            <p>
+                                Internation Space Station
+                            </p>
+                        </div>
+                        <div id="map_body">
+                            <script>
+                                var norad_n2yo = '25544';
+                                var size_n2yo = 'small';
+                                // var map_n2yo = '1';
+                            </script>
+                            <script type="text/javascript" src="https://www.n2yo.com/js/widget-tracker.js"></script>
+                            <div id="cosmonauts">
+                                <h3>
+                                    People in Space right now :
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="iss_stream">
+                        <iframe width="500" height="380" src="https://www.youtube.com/embed/EEIk7gwjgIM"></iframe>
                     </div>
                 </div>
             </div>
