--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <div id="map_station" class="table_body">
                         <div class="subtitle_details">
                             <p>
-                                Internation Space Station
+                                International Space Station
                             </p>
                         </div>
                         <div id="map_body">
