last commit, without mq

--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
     <script src="./js/container.js"></script>
     <script src="./json/clothes.json"></script>
     <script src="./js/store.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
-    <script src="//geodata.solutions/includes/countrystatecity.js"></script>
+    <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>  -->
+    <!-- <script src="//geodata.solutions/includes/countrystatecity.js"></script> -->
     <script src="https://smtpjs.com/v3/smtp.js"></script> 
     <script src="./js/contact.js"></script>
 </body>
